--- a/catalog.html
+++ b/catalog.html
@@ -30,14 +30,19 @@
             <li class="button-item">
               <a class="button-search" href="#">
                 <span class="visually-hidden">Поиск.</span>
-                <img class="search-icon" src="./images/icons/search.svg" width="20" height="20" alt="Иконка поиска.">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none">
+                  <path fill="#000" d="m19.5 18-3.7-3.7a8 8 0 0 0 1.7-4.8 8 8 0 1 0-3.1 6.3l3.7 3.7 1.4-1.5Zm-10-2.5a6 6 0 0 1-6-6 6 6 0 0 1 12 0 6 6 0 0 1-6 6Z"/>
+                </svg>
+
               </a>
             </li>
             <li class="button-item">
               <a class="button-favorite" href="#">
                 <span class="counter">12</span>
                 <span class="visually-hidden">Избранное.</span>
-                <img class="search-icon" src="./images/icons/favorite.svg" width="18" height="17" alt="Иконка сердечко.">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none">
+                  <path fill="#000" d="M8.9 17a1 1 0 0 1-.8-.4l-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.5 5.5 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5L9 14.4l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.7-1.3 3.3 3.3 0 0 0-3.3 3.3c-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/>
+                </svg>
               </a>
             </li>
             <li class="button-item-want">
@@ -110,7 +115,7 @@
 
           <div class="search-form-wrapper">
             <fieldset class="search-form-section">
-                <legend class="search-form-section-title">Стоимость,₽</legend>
+                <legend class="search-form-section-title">Стоимость,₽: </legend>
 
                 <div class="price-wrapper">
                   <div class="price-input-wrapper">
@@ -155,21 +160,18 @@
               </select>
               <ul class="search-results-change-view">
                 <li class="change-view-item">
-                  <a class="change-view-button selected-view" href="#">
+                  <a class="change-view-button selected-view tiles" href="#">
                     <span class="visually-hidden">Плитка.</span>
-                    <img class="change-icons" src="./images/icons/icon-tiles.svg" width="16" height="14" alt="Иконка-плитка.">
                   </a>
                 </li>
                 <li class="change-view-item">
-                  <a class="change-view-button" href="#">
+                  <a class="change-view-button window" href="#">
                     <span class="visually-hidden">Карточки.</span>
-                    <img class="change-icons" src="./images/icons/icon-window.svg" width="16" height="14" alt="Иконка-окошко.">
                   </a>
                 </li>
                 <li class="change-view-item">
-                  <a class="change-view-button" href="#">
+                  <a class="change-view-button list" href="#">
                     <span class="visually-hidden">Список.</span>
-                    <img class="change-icons" src="./images/icons/icon-list.svg" width="16" height="14" alt="Иконка-список.">
                   </a>
                 </li>
               </ul>
@@ -193,20 +195,20 @@
                   </div>
                   <div class="rating-wrapper">
                   <ul class="rating-list">
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 1</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 2</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 3</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 4</span>
                     </li>
-                    <li>
-                      <img class="rating-star visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 5</span>
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 8,5</span>
@@ -231,20 +233,20 @@
 
                   <div class="rating-wrapper">
                     <ul class="rating-list">
-                      <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                      <li class="rating-star">
+                        <span class="visually-hidden">Звезда рейтинга 1</span>
                       </li>
-                      <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                      <li class="rating-star">
+                        <span class="visually-hidden">Звезда рейтинга 2</span>
                       </li>
-                      <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                      <li class="rating-star">
+                        <span class="visually-hidden">Звезда рейтинга 3</span>
                       </li>
-                      <li>
-                        <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                      <li class="rating-star">
+                        <span class="visually-hidden">Звезда рейтинга 4</span>
                       </li>
-                      <li>
-                        <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                      <li class="rating-star visually-hidden">
+                        <span class="visually-hidden">Звезда рейтинга 5</span>
                       </li>
                     </ul>
 
@@ -269,20 +271,21 @@
                   </div>
                   <div class="rating-wrapper">
                   <ul class="rating-list">
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 1</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 2</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 3</span>
                     </li>
-                    <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 4</span>
                     </li>
-                    <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 5</span>
+                    </li>
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 6,9</span>
@@ -306,20 +309,21 @@
                   </div>
                   <div class="rating-wrapper">
                   <ul class="rating-list">
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 1</span>
                     </li>
-                    <li>
-                      <img class="rating-star" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star">
+                      <span class="visually-hidden">Звезда рейтинга 2</span>
                     </li>
-                    <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 3</span>
                     </li>
-                    <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 4</span>
                     </li>
-                    <li>
-                      <img class="visually-hidden" src="./images/icons/icon-star.svg" width="18" height="17" alt="звездочка.">
+                    <li class="rating-star visually-hidden">
+                      <span class="visually-hidden">Звезда рейтинга 5</span>
+                    </li>
                     </li>
                   </ul>
                     <span class="rating-text">Рейтинг: 5,0</span>
@@ -404,9 +408,7 @@
               </li>
           </ul>
 
-          <a class="footer-tel" href="tel:+78128121212">
-            +7 (812)-812-12-12
-          </a>
+          <a class="footer-tel" href="tel:+78128121212">+7&nbsp;(812)&nbsp;812-12-12</a>
 
           <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
             <span class="visually-hidden">
