Проверяет через валидатор

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <main class="container">
       <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="main-logo" href="/">
@@ -203,7 +203,7 @@
           </a>
       </div>
       </footer>
-    </div>
+    </main>
 
     <div class="modal-container">
       <div class="modal modal-search">
